syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.aiservice.interfaces.grpc";
option java_outer_classname = "ProcessProto";

service ProcessService {
  rpc StartProcess (StartProcessRequest) returns (StartProcessResponse);
}

message StartProcessRequest {
  string command = 1; // Command field
  int32 planId = 2;   // plan id field
}

message StartProcessResponse {
  string message = 1; // response field
}